# irrBullet

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sta07076
irrLibIncludes/: kinematiccharactercontroller.h
nbproject/: Package-Default.bash  configurations.xml  project.xml
src/: constants.h  main.cpp
src/engine/: World.cpp  World.h
src/game/: Character.cpp  Character.h
src/game/scene/: GameScene.cpp  GameScene.h
