CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(runover)

SET(RUNOVER_ROOT_PATH ${PROJECT_BINARY_DIR})
SET(RUNOVER_SOURCE_PATH ${RUNOVER_ROOT_PATH}/src)
SET(RUNOVER_BIN_PATH ${RUNOVER_ROOT_PATH}/bin)
SET(RUNOVER_EXEC_NAME runover)

SET(EXECUTABLE_OUTPUT_PATH ${RUNOVER_BIN_PATH})

FILE(GLOB_RECURSE RUNOVER_SHARED_SOURCE_FILES ${RUNOVER_SOURCE_PATH}/*.cpp)
LIST(REMOVE_ITEM RUNOVER_SHARED_SOURCE_FILES ${RUNOVER_SOURCE_PATH}/main.cpp)

SET(RUNOVER_SOURCE_FILES ${RUNOVER_SOURCE_PATH}/main.cpp)

SET(RUNOVER_TEST_SOURCE_FILES ${RUNOVER_TEST_SOURCE_FILES} ${RUNOVER_SOURCE_FILES} )
LIST(REMOVE_ITEM RUNOVER_TEST_SOURCE_FILES ${RUNOVER_SOURCE_PATH}/main.cpp)

SET(CMAKE_CXX_FLAGS "-g -Wall")

ADD_LIBRARY(base STATIC ${RUNOVER_SHARED_SOURCE_FILES})

ADD_EXECUTABLE(${RUNOVER_EXEC_NAME} ${RUNOVER_SOURCE_FILES})

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  TARGET_LINK_LIBRARIES(${RUNOVER_EXEC_NAME} base -lIrrlicht -static -lSOIL -lopengl32 -lglu32 -static -lfreeglut -lglaux -lglew32 
            -lirrBullet -lbulletdynamics -lbulletsoftbody -lgimpactutils -llinearmath -lbulletcollision -lBulletWorldImporter)
ENDIF()
IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
  TARGET_LINK_LIBRARIES(${RUNOVER_EXEC_NAME} -lGL base -lIrrlicht -lGLU -lglut -lSDL)
ENDIF()


INSTALL(TARGETS ${RUNOVER_EXEC_NAME} DESTINATION /usr/bin/)
